@@ -1,5 +1,6 @@
 package com.sparta.dtogram.post.service;
 
+import com.sparta.dtogram.post.dto.PostListResponseDto;
 import com.sparta.dtogram.like.repository.PostLikeRepository;
 import com.sparta.dtogram.post.dto.PostRequestDto;
 import com.sparta.dtogram.post.dto.PostResponseDto;
@@ -11,6 +12,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,25 +21,37 @@ public class PostService {
     private final PostLikeRepository postLikeRepository;
     private final UserRepository userRepository;
 
+    // 게시글 생성
     public PostResponseDto createPost(PostRequestDto requestDto, User user) {
         Post post= postRepository.save(new Post(requestDto, user));
+        return new PostResponseDto(post);
+    }
+
+    // 게시글 단건 조회
+    @Transactional(readOnly = true)
+    public PostResponseDto getPostById(Long id) {
+        Post post = findPost(id);
 
         return new PostResponseDto(post);
-
     }
 
+    // 게시글 다건 조회
     @Transactional(readOnly = true)
-    public List<PostResponseDto> getPosts() {
-        return postRepository.findAllByOrderByModifiedAtDesc().stream().map(PostResponseDto::new).toList();
+    public PostListResponseDto getPosts() {
+        List<PostResponseDto> postList = postRepository.findAll().stream()
+                .map(PostResponseDto::new)
+                .collect(Collectors.toList());
+
+        return new PostListResponseDto(postList);
     }
 
-    @Transactional(readOnly = true)
-    public List<PostResponseDto> getPostsByKeyword(String keyword) {
-        if (keyword == null) {
-            throw new RuntimeException("키워드를 입력해주세요");
-        }
-        return postRepository.findAllByContentsContainingOrderByModifiedAtDesc(keyword).stream().map(PostResponseDto::new).toList();
-    }
+//    @Transactional(readOnly = true)
+//    public List<PostResponseDto> getPostsByKeyword(String keyword) {
+//        if (keyword == null) {
+//            throw new RuntimeException("키워드를 입력해주세요");
+//        }
+//        return PostRepository.findAllByContentsContainingOrderByModifiedAtDesc(keyword).stream().map(PostResponseDto::new).toList();
+//    }
 
     @Transactional
     public PostResponseDto updatePost(Long id, PostRequestDto requestDto, User user) {
@@ -71,6 +85,7 @@ public class PostService {
 //                new IllegalArgumentException("존재하지 않는 유저입니다.")
 //        );
 //    }
+
 
 //    @Transactional
 //    public String like(Long postId, Long userId) {
